# python-ria.py

./: CONTRIBUTING.md  README.md  setup.cfg
.github/workflows/: publish.yml  unittest.yml
ria/: __init__.py  _typing.py  constants.py  main.py  ria_weather_stations.json
ria/callback/: http_get_callback.py
tests/: test_datos_diarios.py  test_datos_mensuales.py  test_estaciones.py  test_provincias.py
