[metadata]
name = python-ria
version = 0.0.3
author = Francisco Puig
# author_email = 
long_description = file: README.md
long_description_content_type= text/markdown
keywords = weather, RIA, Red de Información Agroclimática de Andalucía
# url = https://github.com/
# project_urls =
#     Bug Tracker = https://github.com/
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux

[options]
install_requires = 
    requests == 2.27.1
setup_requires =
    requests == 2.27.1
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tools*
    tests*
    venv*

